Source/WebKit/Platform/spi/Cocoa/AccessibilitySupportSPI.h
@@ -45,6 +45,8 @@ extern CFStringRef kAXSFullKeyboardAccessEnabledNotification;
 extern Boolean _AXSFullKeyboardAccessEnabled();
 #endif
 
+extern CFStringRef kAXSAccessibilityPreferenceDomain;
+
 WTF_EXTERN_C_END
 
 #endif
